--- a/playgrounds/sandbox/package.json
+++ b/playgrounds/sandbox/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@arco-design/web-solid": "^0.0.1",
+    "@arco-themes/react-molly": "^0.0.4",
     "solid-js": "^1.6.9"
   }
 }
