--- a/playgrounds/sandbox/tsconfig.json
+++ b/playgrounds/sandbox/tsconfig.json
@@ -3,5 +3,5 @@
   "compilerOptions": {
     "types": ["vite/client"]
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "./node_modules/@arco-design/web-solid/dist/index.d.ts"]
 }
