--- a/packages/web/package.json
+++ b/packages/web/package.json
@@ -64,6 +64,8 @@
   },
   "dependencies": {
     "@solid-primitives/map": "^0.4.8",
+    "@solid-primitives/props": "^3.1.8",
+    "@solid-primitives/refs": "^1.0.5",
     "@solid-primitives/resize-observer": "^2.0.22",
     "@solid-primitives/scheduled": "^1.4.1",
     "b-validate": "^1.5.3",
